inserita funzionalità per reinviare al server solamente le info del phone